added index html

--- a/main.css
+++ b/main.css
@@ -1,11 +1,1 @@
-body {
-    background-color: green;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    background-color: green;
-    font-size: 24px;
-  }
+his is a throwaway repo used to learn about working with Git and GitHub.
